--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.3"
-  }
+  },
+  "proxy": "http://localhost:5001"
 }
