--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.4.5",
+    "react-sweetalert2": "^0.6.0",
     "swiper": "^11.1.3",
     "web-vitals": "^2.1.4"
   },
