--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.19",
     "daisyui": "^4.12.2",
+    "framer-motion": "^11.2.12",
     "install": "^0.13.0",
     "npm": "^10.8.1",
+    "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.3",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.4.5",
@@ -50,7 +54,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.4"
   },
   "proxy": "http://localhost:5000"
 }
