--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "daisyui": "^4.12.2",
     "framer-motion": "^11.2.12",
     "install": "^0.13.0",
+    "lottie-react": "^2.4.0",
     "npm": "^10.8.1",
     "postcss": "^8.4.39",
     "react": "^18.3.1",
@@ -19,7 +20,6 @@
     "react-intersection-observer": "^9.10.3",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
-    "react-scroll-parallax": "^3.4.5",
     "react-sweetalert2": "^0.6.0",
     "sweetalert2": "^11.12.1",
     "sweetalert2-react-content": "^5.0.7",
